packages/gaist/examples/invalid/unterminated-string.gaist
// Unterminated string literal
state {
  name = "unterminated string;
  age = 25;
} 